<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context=".TasksActivity" >

    <TextView
        android:id="@+id/stepDesctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#109DFA"
        android:minHeight="50dp"
        android:width="640dp" />

    <TextView
        android:id="@+id/helperhdrhelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stepDesctxt"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:text="@string/callOptions"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/CallOptionTxtViewHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepDesctxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableBottom="@drawable/video_icon1"
        android:text="@string/start_video_call"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="40sp" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nxtChoicetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/next_choice"
            android:gravity="center_vertical"
            android:text="@string/nextChoice" />

        <TextView
            android:id="@+id/backtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/back"
            android:gravity="center_vertical"
            android:text="@string/back" />

        <TextView
            android:id="@+id/taptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/wantThistxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_want_this" />

        <TextView
            android:id="@+id/taptaptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap_tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/needHelptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_need_help" />

    </LinearLayout>


</RelativeLayout>